@@ -2,11 +2,13 @@
 #include <algorithm>
 #include <cassert>
 
-void dgm::Controller::update(const dgm::Time&) {
+void dgm::Controller::update(const dgm::Time&)
+{
 	controllerConnected = XInputGetState(controllerIndex, &xstate) == ERROR_SUCCESS;
 }
 
-bool dgm::Controller::isToggled(const int code) const {
+bool dgm::Controller::isToggled(const int code) const
+{
 	const bool pressed = sf::Mouse::isButtonPressed(bindings.at(code).btn)
 		|| sf::Keyboard::isKeyPressed(bindings.at(code).key)
 		|| (controllerConnected && (xstate.Gamepad.wButtons & static_cast<WORD>(bindings.at(code).xbtn)));
@@ -15,7 +17,8 @@ bool dgm::Controller::isToggled(const int code) const {
 		: (bindings.at(code).released = false); // assignment is on purpose
 }
 
-float dgm::Controller::getValue(const int code) const {
+float dgm::Controller::getValue(const int code) const
+{
 	constexpr int HALF_SHORT_MAX = 32767;
 
 	if (isToggled(code)) return bindings[code].negateMultiplier;
@@ -23,17 +26,18 @@ float dgm::Controller::getValue(const int code) const {
 
 	// Normalize everything to intervals <-1, 1>
 	// see docs for more details: https://docs.microsoft.com/en-us/windows/win32/api/xinput/ns-xinput-xinput_gamepad
-	switch (bindings.at(code).xaxis) {
-	//case dgm::Xbox::Axis::LStickX:    return std::clamp(int(xstate.Gamepad.sThumbLX), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
+	switch (bindings.at(code).xaxis)
+	{
+		//case dgm::Xbox::Axis::LStickX:    return std::clamp(int(xstate.Gamepad.sThumbLX), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::LStickXpos: return std::clamp(int(xstate.Gamepad.sThumbLX), 0, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::LStickXneg: return std::clamp(int(xstate.Gamepad.sThumbLX), -HALF_SHORT_MAX, 0) / float(HALF_SHORT_MAX);
-	//case dgm::Xbox::Axis::LStickY:    return std::clamp(int(xstate.Gamepad.sThumbLY), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
+		//case dgm::Xbox::Axis::LStickY:    return std::clamp(int(xstate.Gamepad.sThumbLY), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::LStickYpos: return -std::clamp(int(xstate.Gamepad.sThumbLY), 0, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::LStickYneg: return -std::clamp(int(xstate.Gamepad.sThumbLY), -HALF_SHORT_MAX, 0) / float(HALF_SHORT_MAX);
-	//case dgm::Xbox::Axis::RStickX:    return std::clamp(int(xstate.Gamepad.sThumbRX), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
+		//case dgm::Xbox::Axis::RStickX:    return std::clamp(int(xstate.Gamepad.sThumbRX), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::RStickXpos: return std::clamp(int(xstate.Gamepad.sThumbRX), 0, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::RStickXneg: return std::clamp(int(xstate.Gamepad.sThumbRX), -HALF_SHORT_MAX, 0) / float(HALF_SHORT_MAX);
-	//case dgm::Xbox::Axis::RStickY:    return std::clamp(int(xstate.Gamepad.sThumbRY), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
+		//case dgm::Xbox::Axis::RStickY:    return std::clamp(int(xstate.Gamepad.sThumbRY), -HALF_SHORT_MAX, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::RStickYpos: return -std::clamp(int(xstate.Gamepad.sThumbRY), 0, HALF_SHORT_MAX) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::RStickYneg: return -std::clamp(int(xstate.Gamepad.sThumbRY), -HALF_SHORT_MAX, 0) / float(HALF_SHORT_MAX);
 	case dgm::Xbox::Axis::LTrigger:   return xstate.Gamepad.bLeftTrigger / 255.f;
@@ -42,7 +46,8 @@ float dgm::Controller::getValue(const int code) const {
 	}
 }
 
-void dgm::Controller::setControllerVibration(const float left, const float right) {
+void dgm::Controller::setControllerVibration(const float left, const float right)
+{
 	assert(0.f <= left && left <= 1.f && "Parameter left must be in <0.f, 1.f> range");
 	assert(0.f <= right && right <= 1.f && "Parameter right must be in <0.f, 1.f> range");
 
@@ -52,23 +57,27 @@ void dgm::Controller::setControllerVibration(const float left, const float right
 	XInputSetState(controllerIndex, &vibration);
 }
 
-void dgm::Controller::bindInput(const int code, sf::Keyboard::Key key) {
-	assert(bindings[code].key != sf::Keyboard::Unknown && "Trying to rebind keyboard key");
+void dgm::Controller::bindInput(const int code, sf::Keyboard::Key key)
+{
+	assert(bindings[code].key == sf::Keyboard::Unknown && "Trying to rebind keyboard key");
 	bindings[code].key = key;
 }
 
-void dgm::Controller::bindInput(const int code, sf::Mouse::Button btn) {
-	assert(bindings[code].btn != sf::Mouse::Button::ButtonCount && "Trying to rebind mouse button");
+void dgm::Controller::bindInput(const int code, sf::Mouse::Button btn)
+{
+	assert(bindings[code].btn == sf::Mouse::Button::ButtonCount && "Trying to rebind mouse button");
 	bindings[code].btn = btn;
 }
 
-void dgm::Controller::bindInput(const int code, dgm::Xbox::Button btn) {
-	assert(bindings[code].xbtn != Xbox::Button::Unknown && "Trying to rebind Xbox button");
+void dgm::Controller::bindInput(const int code, dgm::Xbox::Button btn)
+{
+	assert(bindings[code].xbtn == Xbox::Button::Unknown && "Trying to rebind Xbox button");
 	bindings[code].xbtn = btn;
 }
 
-void dgm::Controller::bindInput(const int code, dgm::Xbox::Axis axis) {
-	assert(bindings[code].xaxis != Xbox::Axis::Unknown && "Trying to rebind Xbox axis");
+void dgm::Controller::bindInput(const int code, dgm::Xbox::Axis axis)
+{
+	assert(bindings[code].xaxis == Xbox::Axis::Unknown && "Trying to rebind Xbox axis");
 	bindings[code].xaxis = axis;
 	// If enum code is for negative half of axis
 	if (static_cast<std::size_t>(axis) >= 200)
